2015-04-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c: Silence Coverity 10224, 10233, and 10236 "Improper
	use of negative value".

	* coders/mat.c (ReadMATImage): Silence Coverity 10175 "Improper
	use of negative value"

	* coders/tga.c (ReadTGAImage): Silence Coverity 10088 "Operands
	don't affect result".

	* magick/annotate.c (RenderFreetype): Silence Coverity 14396 and
	44755 "Unused value".

	* coders/wpg.c (LoadWPG2Flags): Silence Coverity 10273 and 10253
	"Unused value".

	* magick/montage.c (MontageImages): Silence Coverity 10255 "Unused
	value".
	(MontageImages): Silence Coverity 10264 "Unused value".

2015-04-09  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOneJNGImage): Avoid using a NULL alpha_image
	or color_image. (ReadJNGImage): Removed an extraneous CloseBlob().

2015-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickCreateDirectoryPath): Silence Coverity
	10098 "Logically dead code".

	* magick/resource.c (InitializeMagickResources): Silence Coverity
	10101 "Logically dead code".

	* magick/magick.c (MagickSignalHandlerMessage): Fix Coverity 44725
	"Logically dead code".

	* magick/log.c (DestroyLogInfo): Silence Coverity 53659 and 53661
	"Data race condition".
	(ReadLogConfigureFile): Silence Coverity 53660 "Data race
	condition".

	* magick/effect.c (DespeckleImage): Fix error handling issue
	caused by shadowed variable.  Fixes Coverity 10099 "Logically dead
	code".

	* magick/command.c (TimeImageCommand): Fix Coverity 10097
	"Logically dead code".

	* magick/attribute.c (ReadMSBLong): Hopefully silence Coverity
	10276 "Unintended sign extension".

	* coders/sgi.c (ReadSGIImage, WriteSGIImage): Fix Coverity 10243,
	10244, 10247, 10254, and 10294 "Unintended sign extension".

2015-04-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Quiet Coverity 10282
	"Unused value".
