@@ -38,6 +38,8 @@
 <p>2015-04-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/annotate.c (RenderX11): Silence Coverity 10106 &quot;Logically
+dead code&quot;.</li>
 <li>coders/xcf.c: Silence Coverity 10224, 10233, and 10236 &quot;Improper
 use of negative value&quot;.</li>
 <li>coders/mat.c (ReadMATImage): Silence Coverity 10175 &quot;Improper
